<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/overview_dialog_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    android:background="@color/dialogBackground">

    <!--> Overview dialog top: Edit Collection / Add Collection <-->
    <TableRow>
        <TextView
            android:id="@+id/overview_dialog_tv_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_placeholder"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </TableRow>

    <!--> Overview dialog title <-->
    <TableRow>

        <TextView
            android:id="@+id/overview_dialog_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview_dialog_tv_title"
            android:textColor="@color/colorWhite"/>

        <EditText
            android:id="@+id/overview_dialog_et_title"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/overview_dialog_et_title_hint"
            android:autofillHints="@string/overview_dialog_et_title_hint" />
    </TableRow>

    <!--> Overview dialog description <-->
    <TableRow>
        <TextView
            android:id="@+id/overview_dialog_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview_dialog_tv_description"
            android:textColor="@color/colorWhite"/>

        <EditText
            android:id="@+id/overview_dialog_et_description"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/overview_dialog_et_description_hint"
            android:autofillHints="@string/overview_dialog_et_description_hint"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"/>
    </TableRow>
</TableLayout>