<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/item_card_list_alpha"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

        <TextView
            android:id="@+id/text_view_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_card_list_cardName"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:maxLines="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/text_view_card_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_card_list_type"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_below="@id/text_view_card_name" />

        <TextView
            android:id="@+id/text_view_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_toLeftOf="@id/button_increase_quantity"
            android:layout_toStartOf="@id/button_increase_quantity"
            android:layout_alignTop="@id/text_view_card_type"
            android:layout_alignBottom="@id/text_view_card_type"
            android:layout_marginRight="2dp"/>

        <ImageButton
            android:id="@+id/button_increase_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_toLeftOf="@id/button_decrease_quantity"
            android:layout_toStartOf="@id/button_decrease_quantity"
            android:layout_below="@id/text_view_series"
            android:layout_alignTop="@id/text_view_card_type"
            android:layout_alignBottom="@id/text_view_card_type"
            android:cropToPadding="true"
            style="@style/small_square_button"
            app:srcCompat="@drawable/ic_add_small"
            android:contentDescription="@string/item_card_list_incrementQ" />

        <ImageButton
            android:id="@+id/button_decrease_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_view_series"
            android:layout_alignTop="@id/text_view_card_type"
            android:layout_alignBottom="@id/text_view_card_type"
            android:cropToPadding="true"
            style="@style/small_square_button"
            app:srcCompat="@drawable/ic_remove_small"
            android:contentDescription="@string/item_card_list_decrementQ" />
    </RelativeLayout>

</android.support.v7.widget.CardView>